# Quant-BM-WAND

./: .gitignore  CMakeLists.txt  README.md  run_clueweb_09.sh
include/: invidx.hpp  lowerbound_threshold.hpp  query.hpp  score_cache.hpp  util.hpp
src/: lowerbound_threshold.cpp  score_cache.cpp  search_index.cpp
tools/: compare_runs.py  run_variance.py  static_cache.py
tools/gen-subsets-benchmark/: CMakeLists.txt  benchmark.cpp
tools/stem-s/: CMakeLists.txt  stem_s_log.cpp
